# localization-stuff

./: .gitmodules  README.md
two_d_localization/: CMakeLists.txt  package.xml
two_d_localization/config/: aruco_localization.yaml  aruco_poses.yaml  wheel_odometry.yaml
two_d_localization/include/two_d_localization/: WheelOdometry.h
two_d_localization/launch/: localize_with_aruco.launch  wheel_odom.launch
two_d_localization/scripts/: aruco_localizer.py
two_d_localization/src/: WheelOdometry.cpp  wheel_odometry_node.cpp
